APIs/config-management/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-management
  namespace: config-management-namespace
  labels:
    app: config-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-management
  template:
    metadata:
      labels:
        app: config-management
    spec:
      containers:
      - name: config-management
        image: config-management-image
        command: ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          protocol: TCP
          name: app-port
