APIs/config-management/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-management
  namespace: config-management-namespace
spec:
  selector:
    app: config-management
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
