APIs/config-management/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic
  namespace: config-management-namespace
spec:
  podSelector:
    matchLabels:
      app: config-management
  policyTypes:
    - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: api-gateway
    ports:
    - protocol: TCP
      port: 8000
